--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,39 @@ background-attachment: fixed;
     font-size: 14px;
     margin: -16px 0 0 120px;
 }
+
+.titulo_2{
+    width: 550px;
+    font-family: Work Sans;
+    font-size: 48px;
+    padding: 150px 0 0 185px;
+}
+
+.texto{
+    width: 500px;
+    text-align: justify;
+    font-family: Work Sans;
+    padding: 0 0 0 185px;
+}
+
+.btns{
+    padding: 30px 0 0 185px;
+}
+
+.btn1{
+    background-color: #F70058;
+    color: white;
+    border: 0;
+    width: 170px;
+    height: 40px;
+    font-family: Work Sans;
+    font-size: 15px;
+}
+
+.btn2{
+    margin: 0 0 0 20px;
+    color: #F70058;
+    border-color: #F70058;
+    width: 170px;
+    height: 40px;
+}
